--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-img": "^0.8.0",
     "@babel/core": "^7.13.8",
+    "@babel/eslint-parser": "^7.13.8",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-env": "^7.13.8",
     "@fullhuman/postcss-purgecss": "^4.0.2",
     "autoprefixer": "9.8.6",
