modify webpack loader config

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "browserslist": "last 2 years and > 0.5%, ie 11",
   "scripts": {
     "dev": "yarn clean && run-p dev:*",
-    "dev:assets": "APP_ENV=development webpack --mode production --watch",
+    "dev:assets": "APP_ENV=development webpack --watch --progress",
     "dev:site": "eleventy --serve",
     "build": "run-s clean build:fontagon build:assets build:site",
-    "build:assets": "webpack --mode production",
+    "build:assets": "webpack",
     "build:site": "eleventy",
     "build:fontagon": "node libs/fontagon",
     "clean": "rm -rf ./dist",
@@ -49,8 +49,10 @@
     "cssnano": "^4.1.10",
     "eslint": "^7.21.0",
     "eslint-loader": "^4.0.2",
+    "file-loader": "4.2.0",
     "handlebars-helpers": "^0.10.0",
     "html-minifier": "^4.0.0",
+    "image-webpack-loader": "5.0.0",
     "import-glob-loader": "^1.1.0",
     "js-yaml": "^4.0.0",
     "license-info-webpack-plugin": "^3.0.0",
